src/assets/scss/style.scss
/* ... */
// openapi
  .open-api-object {
    border: 1px solid rgba(0, 0, 0, 0.15);
    margin-bottom: 1rem;
    border-left: 6px solid rgba(0, 0, 0, 0.15);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
    background-color: #fff;
    &.collapsed {
      border-left: 6px solid #0088CC;
    }
    &:hover {
      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    }
    .open-api-object {
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
      &:hover {
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
      }
    }
    .open-api-object-title {
      cursor: pointer;
      min-height: 2.5rem;
      display: flex;
      // align-items: center;
      > div {
        padding: .5rem 1rem .5rem 1rem;
        margin-right: auto;
        word-wrap: break-word;
        flex-grow: 1;
      }
    }
    .oao-dropdown {
      .btn {
        padding: .5rem 0;
        width: 2.5rem;
        text-align: center;
        // border-left: 1px solid rgba(0, 0, 0, 0.15);
        svg { width: 1rem; }
      }
    }
    .oao-arrow {
      padding: .5rem .75rem;
      text-align: center;
      border-left: 1px solid rgba(0, 0, 0, 0.15);
      svg { width: 1rem; }
    }
  }
  .open-api-object-container {
    min-height: 2.5rem;
    padding: 1rem 1rem 0 1rem;
    border-top: 1px solid rgba(0, 0, 0, 0.15);
  }

// content
  dd:empty {
    &:after {
      content: '-';
    }
  }
  .bg-cover {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }
  pre {
    margin-bottom: 0;
  }
  .btn {
    &.is-deleted {
      opacity: 0.45;
      position: relative;
      &:before  {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        border-right: 10px solid transparent;
        border-left: 10px solid red;
        border-bottom: 10px solid transparent;
        height: 0;
        width: 0;
        z-index: 1;
      }
    }
  }
  .btn-icon {
    // border-radius: 3rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-left: .5rem;
    padding-right: .5rem;
    span {
      // border-right: 1px solid rgba(white, 0.2);
      padding: 0 .5rem;
    }
    svg {
      margin: 0 .5rem;
    }
  }
// form
  option[disabled] {
    color: red;
  }
  input, textarea {
    &.is-valid:not([required]) {
      border-color: $border-color;
      background: none;
    }
  }
  select {
    &.is-valid:not([required]) {
      border-color: $border-color;
      background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
    }
  }
// custom utilities
  .shadow-sm {
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  }
// alerts
  .alert-vivid {
    color: #fff;
    border-color: transparent;
    &.alert-primary {
      background-color: darken(#cce5ff, 40%);
    }
    &.alert-secondary {
      background-color: darken(#e2e3e5, 40%);
    }
    &.alert-success {
      background-color: darken(#d4edda, 40%);
    }
    &.alert-info {
      background-color: darken(#d1ecf1, 40%);
    }
    &.alert-warning {
      background-color: darken(#fff3cd, 50%);
    }
    &.alert-danger {
      background-color: darken(#f8d7da, 40%);
    }
    &.alert-dark {
      background-color: darken(#000000, 40%);
    }
  }
  .alert-t-r {
    position: fixed;
    top: 1rem;
    right: 1rem;
    z-index: 3000;
  }
  .alert-t-l {
    position: fixed;
    top: 1rem;
    left: 1rem;
    z-index: 3000;
  }
  .alert-dismissible .close {
    padding: .75rem 1.25rem;
    line-height: .5;
    font-size: 2rem;
  }

